# pcl_note

./: CMakeLists.txt  QuarticPolynomial.hpp  README.md  cubic_spliner.hpp  frenet_c_node.cpp  package.xml
element/: readme.md
frenet_c/: CMakeLists.txt
frenet_c/include/frenet_c/: quintic_polynomials.hpp
frenet_c/launch/: frenet_c.launch
frenet_c/src/: frenet_c_node.cpp
frenet_c/waypoint_files/: Free.yaml
include/frenet_c/: FrenetPath.hpp  QuarticPolynomial.hpp  QuinticPolynomial.hpp  cubic_spliner.hpp  cubic_spliner_2D.hpp  quintic_polynomials.hpp
src/: frenet_c_node.cpp  icp_node.cpp  transform_node.cpp
